--- a/best-glasses-for-roundface/index.html
+++ b/best-glasses-for-roundface/index.html
@@ -456,9 +456,37 @@
               </li>
             </ul>
           </li> -->
-          <li class=""><a href="#links">Links</a></li>
-          <li class=""><a href="#expanders">Expanders</a></li>
-          <li class=""><a href="#filters">Filters</a></li>
+          <li class="">
+            <a href="#sunglasses"
+              >What are the Best Sunglasses for Round Faces?
+            </a>
+          </li>
+          <li class="">
+            <a href="#notgood"
+              >What are the Glasses that are not good for Round Face Shape?
+            </a>
+          </li>
+          <li class="">
+            <a href="#prices"
+              >What are the Prices of Glasses for Round Faces?
+            </a>
+          </li>
+          <li class="">
+            <a href="#determine"
+              >How to Understand whether you have a Round face or not?
+            </a>
+          </li>
+          <li class="">
+            <a href="#accessories"
+              >What are the other accessories for Round Faces along with
+              Glasses?
+            </a>
+          </li>
+          <li class="">
+            <a href="#prices"
+              >What are the Prices of Glasses for Round Faces?
+            </a>
+          </li>
         </ol>
       </nav>
     </main>
