--- a/best-glasses-for-roundface/index.html
+++ b/best-glasses-for-roundface/index.html
@@ -490,5 +490,8 @@
         </ol>
       </nav>
     </main>
+    <div class="image-wrapper">
+      <img src="./assets/unnamed.jpeg" alt="" class="banner" />
+    </div>
   </body>
 </html>
